--- a/index.html
+++ b/index.html
@@ -363,13 +363,32 @@ document.onmouseup = mousehandler;
 <div class="wrapper">
 <div class="profile-card js-profile-card">
 <div class="profile-card__img">
-<a href="/" data-toggle="modal"><img src="images/JSTeam.png" alt="profile card"></a>
+<a href="https://www.youtube.com/user/kjmtjzhan/videos" target='_blank' data-toggle="modal"><img src="images/frankynouva.png" alt="profile card"></a>
 </div>
 <div class="profile-card__cnt js-profile-cnt">
-<a href="#myModalcontact" class="profile-card__name" data-toggle="modal"><b>MAX2020</b></a>
+<a href="#myModalcontact" class="profile-card__name" data-toggle="modal"><b>CloneAppX & MAX2020lite</b></a>
 <div class="profile-card__txt"><h6><i>''Think difference, we make new experience''</i></h6></div>
 
-<p><h5><strong>Bài viết hay hôm nay (<script> document.write(new Date().toLocaleDateString()); </script>)</strong></h5></p>
+
+<p><h5><strong>Tổng Hợp Link Bài Viết Quan Trọng:  <script> document.write(new Date().toLocaleDateString()); </script></strong></h5></p>
+
+
+<p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>Nghìn Lẻ Một Câu Hỏi liên quan CloneAppX & MAX2020lite</h6></p>
+<p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>1.CloneAppX (thủ công) là gì ?</h6></p>
+<p><h6>2.MAX2020lite (auto) là gì ?</h6></p>
+<p><h6>3.Nuôi Acc để làm gì ?</h6></p>
+<p><h6><a href="https://bit.ly/2HyPhw7"  target='_blank'>Lộ Trình Nuôi Acc cho người mới</a></h6></p>
+<p><h6>4.Tại sao cần nhân bản app ?</h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=yCmaI09rF9s"  target='_blank'>5.HDSD CloneAppX (thủ công)</a></h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>6.HDSD MAX2020lite (auto)</a></h6></p>
+<p><h6><a href="https://bit.ly/2G18MwT"  target='_blank'>7.HD kích lại CloneAppX hết pin (văng app)</a></h6></p> 
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>8.HD kích lại MAX2020lite hết pin (văng app)</a></h6></p> 
+<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>8.Lưu ý khi đi mua acc ?</a></h6></p>  
+<p><h6>9.Tại sao acc cần 2FA ?</h6></p>
+<p><h6>10. Liên hệ để mua CloneAppX và MAX2020lite</h6></p>
+<p align="left">&nbsp;&nbsp;<a href="#myModaljailbreak">Những bài viết liên quan:</p>
+
+<p><h5><strong>Bài viết hay hôm nay (F5 để tải thêm bài mới)</strong></h5></p>
 <p id="idemo1"></p>
 <script>
 if (Math.random() < 0.1) 
@@ -582,9 +601,9 @@ document.getElementById("idemo5").innerHTML = text;
 
 
 <div class="sidenavr">
-<a href="fb://jsteam.page"><img src="/images/fb.png" alt="Avatar" style="width:35px"></a>
-<a href="https://m.me/jsteam.page" target="_blank"><img src="/images/messenger.png" alt="Avatar" style="width:35px"></a>
-<a href="https://facebook.com/groups/jsteam.group" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:35px"></a>
+<a href="fb://frankynouva.vn"><img src="/images/fb.png" alt="Avatar" style="width:35px"></a>
+<a href="https://www.messenger.com/t/frankynouva.vn" target="_blank"><img src="/images/messenger.png" alt="Avatar" style="width:35px"></a>
+<a href="https://facebook.com/groups/nuoiaccfb" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:35px"></a>
 
 </div>
 
@@ -688,13 +707,13 @@ function showSlides() {
         <div class="modal-header">
 		
           <!-- Modal close modal button  <button type="button" class="close" data-dismiss="modal">&times;</button> --> 
-          <h4 class="modal-title"><b>MAX2020</b></h4>
+          <h4 class="modal-title"><b>Franky Nouva</b></h4>
         </div>
         <div class="modal-body">
-          <p>Chào mừng bạn đã ghé thăm trang của MAX2020. Trang tiện ích dành cho các thiết bị iOS, bao gồm: check ICCID, tải app Jailbreak, ver thấp, game hack, bài viết công nghệ và giải trí.</p>
+          <p>Chào mừng bạn đã ghé thăm trang dành cho CloneAppX và MAX2020lite. Vui lòng tìm hiểu và đọc kỹ mọi thông tin trước khi liên hệ. 0933.998.772 | Zalo | Viber | iMess (17h-20h).</p>
      
 	  <center>
-        <a href="#myModalcontact" data-toggle="modal"><button type="button" class="btn-success" data-dismiss="modal" width:"60px">Liên hệ</button></a>&nbsp;<a href="https://facebook.com/groups/jsteam.group" target="_blank"><button class="btn-primary">Join Group</button></a>&nbsp;<a href="https://facebook.com/jsteam.page" target="_blank"><button class="btn-info">Like Page</button></a>
+        <a href="#myModalcontact" data-toggle="modal"><button type="button" class="btn-success" data-dismiss="modal" width:"60px">Liên hệ</button></a>&nbsp;<a href="https://facebook.com/groups/nuoiaccfb" target="_blank"><button class="btn-primary">Join Group</button></a>&nbsp;<a href="https://www.messenger.com/t/frankynouva.vn" target="_blank"><button class="btn-info">Like Page</button></a>
 		<p></p>
        <p align="right"><button type="button" class="btn-danger" data-dismiss="modal" width:"60px">Close</button></p>
 		<p></p>
@@ -719,11 +738,11 @@ function showSlides() {
           <h4 class="modal-title"><b>Thông tin liên hệ</b></h4>
         </div>
         <div class="modal-body">
-          <p>Mọi vấn đề, thắc mắc bạn tham gia Group <a href="https://facebook.com/groups/jsteam.group">Jailbreaker Special Team</a> để được hỗ trợ nhanh chóng !</p>
+          <p>Mọi vấn đề, thắc mắc bạn tìm hiểu kỹ trước khi LIÊN HỆ <a href="https://www.messenger.com/t/frankynouva.vn">Franky Nouva</a>. Mọi trường hợp đọc sơ sài, qua loa, sẽ không dc hỗ trợ vì có làm cũng không ra kết quả. Con đường thành công không có dấu chân kẻ lười biếng !</p>
      
 	  <center>
-	  <a href="https://facebook.com/jsteam.page" target="_blank"><img src="/images/fb.png" alt="Avatar" style="width:45px"></a>
-	  <a href="https://facebook.com/groups/jsteam.group" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:45px"></a>
+	  <a href="https://www.messenger.com/t/frankynouva.vn" target="_blank"><img src="/images/fb.png" alt="Avatar" style="width:45px"></a>
+	  <a href="https://facebook.com/groups/nuoiaccfb" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:45px"></a>
 	  <a href="http://youtube.com/c/frankynouva" target="_blank"><img src="/images/youtube.png" alt="Avatar" style="width:45px"></a>
 		</div>
 		<center>
@@ -763,7 +782,7 @@ function showSlides() {
           <p align="left">&nbsp;&nbsp;<a href="#myModaljailbreak">5.Nên dùng iPhone Lock or QT?</p>
 	  <center>
         <a href="https://facebook.com/jsteam.page" target="_blank"><img src="/images/fbpage.png" alt="Avatar" style="width:30px"></a>
-	  <a href="https://facebook.com/groups/jsteam.group" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:30px"></a>
+	  <a href="https://facebook.com/groups/nuoiaccfb" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:30px"></a>
 	  <a href="http://youtube.com/c/frankynouva" target="_blank"><img src="/images/youtube.png" alt="Avatar" style="width:30px"></a>
 		</div>
 		<center>
