--- a/index.html
+++ b/index.html
@@ -373,20 +373,20 @@ document.onmouseup = mousehandler;
 <p><h5><strong>Tổng Hợp Link Bài Viết Quan Trọng:  <script> document.write(new Date().toLocaleDateString()); </script></strong></h5></p>
 
 
-<p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>Nghìn Lẻ Một Câu Hỏi liên quan CloneAppX & MAX2020lite</h6></p>
-<p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>1.CloneAppX (thủ công) là gì ?</h6></p>
-<p><h6>2.MAX2020lite (auto) là gì ?</h6></p>
-<p><h6>3.Nuôi Acc để làm gì ?</h6></p>
-<p><h6><a href="https://bit.ly/2HyPhw7"  target='_blank'>Lộ Trình Nuôi Acc cho người mới</a></h6></p>
-<p><h6>4.Tại sao cần nhân bản app ?</h6></p>
-<p><h6><a href="https://www.youtube.com/watch?v=yCmaI09rF9s"  target='_blank'>5.HDSD CloneAppX (thủ công)</a></h6></p>
-<p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>6.HDSD MAX2020lite (auto)</a></h6></p>
-<p><h6><a href="https://bit.ly/2G18MwT"  target='_blank'>7.HD kích lại CloneAppX hết pin (văng app)</a></h6></p> 
-<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>8.HD kích lại MAX2020lite hết pin (văng app)</a></h6></p> 
-<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>8.Lưu ý khi đi mua acc ?</a></h6></p>  
+<p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>1.Nghìn Lẻ Một Câu Hỏi liên quan</h6></p>
+<p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>2.CloneAppX (thủ công) là gì ?</h6></p>
+<p><h6>3.MAX2020lite (bản auto) là gì ?</h6></p>
+<p><h6><a href="https://bit.ly/2HyPhw7"  target='_blank'>4.Lộ Trình Nuôi cho người mới</a></h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=yCmaI09rF9s"  target='_blank'>5.HDSD CloneAppX ( thủ công)</a></h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>6.HDSD MAX2020lite (bản auto)</a></h6></p>
+<p><h6><a href="https://bit.ly/2G18MwT"  target='_blank'>7.HD kích CloneAppX hết pin (văng)</a></h6></p> 
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>8.HD kích MAX2020lite hết pin (văng)</a></h6></p> 
+<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>8.Lưu ý QT khi đi mua acc ?</a></h6></p>  
 <p><h6>9.Tại sao acc cần 2FA ?</h6></p>
-<p><h6>10. Liên hệ để mua CloneAppX và MAX2020lite</h6></p>
-<p align="left">&nbsp;&nbsp;<a href="#myModaljailbreak">Những bài viết liên quan:</p>
+<p><h6>10.Liên hệ CHỐT CloneAppX & MAX2020lite</h6></p>
+<p><h6>11.Tham gia và liên hệ: Page|Group|Zalo (G)</h6></p>
+<p><h6>3.Nuôi Acc để làm gì ?</h6></p>
+<p><h6>4.Tại sao cần nhân bản app ?</h6></p>
 
 <p><h5><strong>Bài viết hay hôm nay (F5 để tải thêm bài mới)</strong></h5></p>
 <p id="idemo1"></p>
