--- a/index.html
+++ b/index.html
@@ -381,12 +381,16 @@ document.onmouseup = mousehandler;
 <p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>6.HDSD MAX2020lite (bản auto)</a></h6></p>
 <p><h6><a href="https://bit.ly/2G18MwT"  target='_blank'>7.HD kích CloneAppX hết pin (văng)</a></h6></p> 
 <p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>8.HD kích MAX2020lite hết pin (văng)</a></h6></p> 
-<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>8.Lưu ý QT khi đi mua acc ?</a></h6></p>  
+<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>9.Những Lưu ý QT khi đi mua acc ?</a></h6></p>  
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>9.HD Cách gửi hàng ViettelPost</a></h6></p> 
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>11.Tại sao acc fb bị checkpoint?</a></h6></p> 
 <p><h6>9.Tại sao acc cần 2FA ?</h6></p>
 <p><h6>10.Liên hệ CHỐT CloneAppX & MAX2020lite</h6></p>
 <p><h6>11.Tham gia và liên hệ: Page|Group|Zalo (G)</h6></p>
 <p><h6>3.Nuôi Acc để làm gì ?</h6></p>
 <p><h6>4.Tại sao cần nhân bản app ?</h6></p>
+
+<p><h5><strong>====================================</strong></h5></p>
 
 <p><h5><strong>Bài viết hay hôm nay (F5 để tải thêm bài mới)</strong></h5></p>
 <p id="idemo1"></p>
