--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Trang check ICCID, cài tool Jailbreak,app & game hack cùng vô số tiện ích khác">
     <meta name="keywords" content="Cydia, Jailbreak iOS, Apple, AppStore, unc0ver, th0r, electra jailbreak, jailbreak, iOS, Franky Nouva, Jailbreaker Special Team">
     <meta name="author" content="frankynouva.github.io">
-   <title>Jailbreaker Special Team</title>
+   <title>Franky Nouva</title>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Jailbreaker Special Team | Franky Nouva"/>
