--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:url" content="https://frankynouva.github.io/"/>
     <meta property="og:site_name" content="frankynouva.github.io"/>
     <meta property="fb:app_id" content="310782788886365633"/>
-    <meta property="og:image" content="https://3.bp.blogspot.com/-YD_9keXNMEw/W6unWIBbtFI/AAAAAAAABNc/_0uEDdLg0vk41mrnTJtlGOlRI57ImeYzwCLcBGAs/s1600/Cydia-Sileo%2Bmod.png"/>
+    <meta property="og:image" content="https://scontent.fsgn2-6.fna.fbcdn.net/v/t1.0-9/122600527_411209533615157_666719513978159038_o.jpg"/>
     <meta property="og:image:secure_url" content="images/thumnail.png"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
