--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ document.onmouseup = mousehandler;
 <p><h5><strong>Tổng Hợp Link Bài Viết Quan Trọng:  <script> document.write(new Date().toLocaleDateString()); </script></strong></h5></p>
 
 
-<p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>1.Nghìn Lẻ Một Câu Hỏi liên quan</h6></p>
+<p><h6><a href="https://bit.ly/34se2mt"  target='_blank'>1.Nghìn Lẻ Một Câu Hỏi liên quan</h6></p>
 <p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>2.CloneAppX (thủ công) là gì ?</h6></p>
 <p><h6>3.MAX2020lite (bản auto) là gì ?</h6></p>
 <p><h6><a href="https://bit.ly/2HyPhw7"  target='_blank'>4.Lộ Trình Nuôi cho người mới</a></h6></p>
