--- a/index.html
+++ b/index.html
@@ -751,6 +751,7 @@ function showSlides() {
 	  <a href="https://www.messenger.com/t/frankynouva.vn" target="_blank"><img src="/images/fb.png" alt="Avatar" style="width:45px"></a>
 	  <a href="https://facebook.com/groups/nuoiaccfb" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:45px"></a>
 	  <a href="http://youtube.com/c/frankynouva" target="_blank"><img src="/images/youtube.png" alt="Avatar" style="width:45px"></a>
+	  <a href="https://www.messenger.com/t/frankynouva.vn" target="_blank"><img src="/images/messenger.png" alt="Avatar" style="width:45px"></a>
 	  <a href="http://zalo.me/0933998772" target="_blank"><img src="/images/zalo.png" alt="Avatar" style="width:45px"></a>
 		</div>
 		<center>
