--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ document.getElementById("idemo5").innerHTML = text;
 
 <p></p>
 <div class="sidenavt">
- <a href="https://frankynouva.github.io"><img src="/images/homepage.png" alt="Avatar" style="width:45px"></a>
+ <a href="/"><img src="/images/homepage.png" alt="Avatar" style="width:45px"></a>
 	   <a href="#myModalcommingsoon" data-toggle="modal"><img src="./images/jsteamstore.png" alt="Avatar" style="width:45px"></a>
 	   <a href="#myModalcommingsoon" data-toggle="modal"><img src="/images/cydia.png" alt="Avatar" style="width:45px"></a> 
 	   <a href="#myModalcommingsoon" data-toggle="modal"><img src="/images/utilities.png" alt="Avatar" style="width:45px"></a> 
