--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Trang check ICCID, cài tool Jailbreak,app & game hack cùng vô số tiện ích khác">
     <meta name="keywords" content="Cydia, Jailbreak iOS, Apple, AppStore, unc0ver, th0r, electra jailbreak, jailbreak, iOS, Franky Nouva, Jailbreaker Special Team">
     <meta name="author" content="frankynouva.github.io">
-   <title>Jailbreaker Special Team</title>
+   <title>Franky Nouva</title>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Jailbreaker Special Team | Franky Nouva"/>
@@ -26,7 +26,7 @@
     <meta property="og:url" content="https://frankynouva.github.io/"/>
     <meta property="og:site_name" content="frankynouva.github.io"/>
     <meta property="fb:app_id" content="310782788886365633"/>
-    <meta property="og:image" content="https://3.bp.blogspot.com/-YD_9keXNMEw/W6unWIBbtFI/AAAAAAAABNc/_0uEDdLg0vk41mrnTJtlGOlRI57ImeYzwCLcBGAs/s1600/Cydia-Sileo%2Bmod.png"/>
+    <meta property="og:image" content="https://scontent.fsgn2-6.fna.fbcdn.net/v/t1.0-9/122600527_411209533615157_666719513978159038_o.jpg"/>
     <meta property="og:image:secure_url" content="images/thumnail.png"/>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -363,13 +363,39 @@ document.onmouseup = mousehandler;
 <div class="wrapper">
 <div class="profile-card js-profile-card">
 <div class="profile-card__img">
-<a href="/" data-toggle="modal"><img src="images/JSTeam.png" alt="profile card"></a>
+<a href="https://www.youtube.com/user/kjmtjzhan/videos" target='_blank' data-toggle="modal"><img src="images/frankynouva.png" alt="profile card"></a>
 </div>
 <div class="profile-card__cnt js-profile-cnt">
-<a href="#myModalcontact" class="profile-card__name" data-toggle="modal"><b>MAX2020</b></a>
+<a href="#myModalcontact" class="profile-card__name" data-toggle="modal"><b>CloneAppX & MAX2020lite</b></a>
 <div class="profile-card__txt"><h6><i>''Think difference, we make new experience''</i></h6></div>
 
-<p><h5><strong>Bài viết hay hôm nay (<script> document.write(new Date().toLocaleDateString()); </script>)</strong></h5></p>
+
+<p><h5><strong>Tổng Hợp Link Bài Viết Quan Trọng:  <script> document.write(new Date().toLocaleDateString()); </script></strong></h5></p>
+
+
+<p><h6><a href="https://bit.ly/34se2mt"  target='_blank'>1.Nghìn Lẻ Một Câu Hỏi liên quan</h6></p>
+<p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>2.CloneAppX (thủ công) là gì ?</h6></p>
+<p><h6>3.MAX2020lite (bản auto) là gì ?</h6></p>
+<p><h6><a href="https://bit.ly/2HyPhw7"  target='_blank'>4.Lộ Trình Nuôi cho người mới</a></h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=yCmaI09rF9s"  target='_blank'>5.HDSD CloneAppX ( thủ công)</a></h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>6.HDSD MAX2020lite (bản auto)</a></h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>6.HD Gia Hạn tháng MAX2020lite</a></h6></p>
+<p><h6><a href="https://bit.ly/2G18MwT"  target='_blank'>7.HD kích CloneAppX hết pin (văng)</a></h6></p> 
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>8.HD kích MAX2020lite hết pin (văng)</a></h6></p> 
+<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>9.Những Lưu ý QT khi đi mua acc ?</a></h6></p>  
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>9.HD Cách gửi hàng ViettelPost</a></h6></p> 
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>11.Những TH gây ra checkpoint?</a></h6></p> 
+<p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>12.Khẩu Huyết Trọng Yếu Nuôi Acc</a></h6></p>
+<p><h6>9.Tại sao acc cần 2FA ?</h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>15.Chi Phí cho CloneAppX & MAX2020lite</a></h6></p> 
+<p><h6>10.Liên hệ CHỐT CloneAppX & MAX2020lite</h6></p>
+<p><h6>11.Tham gia và liên hệ: Page|Group|Zalo (G)</h6></p>
+<p><h6>3.Nuôi Acc để làm gì ?</h6></p>
+<p><h6>4.Tại sao cần nhân bản app ?</h6></p>
+
+<p><h5><strong>====================================</strong></h5></p>
+
+<p><h5><strong>Bài viết hay hôm nay (F5 để tải thêm bài mới)</strong></h5></p>
 <p id="idemo1"></p>
 <script>
 if (Math.random() < 0.1) 
@@ -567,7 +593,7 @@ document.getElementById("idemo5").innerHTML = text;
 
 <p></p>
 <div class="sidenavt">
- <a href="https://frankynouva.github.io"><img src="/images/homepage.png" alt="Avatar" style="width:45px"></a>
+ <a href="/"><img src="/images/homepage.png" alt="Avatar" style="width:45px"></a>
 	   <a href="#myModalcommingsoon" data-toggle="modal"><img src="./images/jsteamstore.png" alt="Avatar" style="width:45px"></a>
 	   <a href="#myModalcommingsoon" data-toggle="modal"><img src="/images/cydia.png" alt="Avatar" style="width:45px"></a> 
 	   <a href="#myModalcommingsoon" data-toggle="modal"><img src="/images/utilities.png" alt="Avatar" style="width:45px"></a> 
@@ -582,10 +608,10 @@ document.getElementById("idemo5").innerHTML = text;
 
 
 <div class="sidenavr">
-<a href="fb://jsteam.page"><img src="/images/fb.png" alt="Avatar" style="width:35px"></a>
-<a href="https://m.me/jsteam.page" target="_blank"><img src="/images/messenger.png" alt="Avatar" style="width:35px"></a>
-<a href="https://facebook.com/groups/jsteam.group" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:35px"></a>
-
+<a href="fb://frankynouva.vn"><img src="/images/fb.png" alt="Avatar" style="width:35px"></a>
+<a href="https://www.messenger.com/t/frankynouva.vn" target="_blank"><img src="/images/messenger.png" alt="Avatar" style="width:35px"></a>
+<a href="https://facebook.com/groups/nuoiaccfb" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:35px"></a>
+<a href="https://zalo.me/0933998772" target="_blank"><img src="/images/zalo.png" alt="Avatar" style="width:35px"></a>
 </div>
 
 
@@ -688,13 +714,13 @@ function showSlides() {
         <div class="modal-header">
 		
           <!-- Modal close modal button  <button type="button" class="close" data-dismiss="modal">&times;</button> --> 
-          <h4 class="modal-title"><b>MAX2020</b></h4>
+          <h4 class="modal-title"><b>Franky Nouva</b></h4>
         </div>
         <div class="modal-body">
-          <p>Chào mừng bạn đã ghé thăm trang của MAX2020. Trang tiện ích dành cho các thiết bị iOS, bao gồm: check ICCID, tải app Jailbreak, ver thấp, game hack, bài viết công nghệ và giải trí.</p>
+          <p>Chào mừng bạn đã ghé thăm trang dành cho CloneAppX và MAX2020lite. Vui lòng tìm hiểu và đọc kỹ mọi thông tin trước khi liên hệ. 0933.998.772 | Zalo | Viber | iMess (17h-20h).</p>
      
 	  <center>
-        <a href="#myModalcontact" data-toggle="modal"><button type="button" class="btn-success" data-dismiss="modal" width:"60px">Liên hệ</button></a>&nbsp;<a href="https://facebook.com/groups/jsteam.group" target="_blank"><button class="btn-primary">Join Group</button></a>&nbsp;<a href="https://facebook.com/jsteam.page" target="_blank"><button class="btn-info">Like Page</button></a>
+        <a href="#myModalcontact" data-toggle="modal"><button type="button" class="btn-success" data-dismiss="modal" width:"60px">Liên hệ</button></a>&nbsp;<a href="https://facebook.com/groups/nuoiaccfb" target="_blank"><button class="btn-primary">Join Group</button></a>&nbsp;<a href="https://www.messenger.com/t/frankynouva.vn" target="_blank"><button class="btn-info">Like Page</button></a>
 		<p></p>
        <p align="right"><button type="button" class="btn-danger" data-dismiss="modal" width:"60px">Close</button></p>
 		<p></p>
@@ -719,12 +745,14 @@ function showSlides() {
           <h4 class="modal-title"><b>Thông tin liên hệ</b></h4>
         </div>
         <div class="modal-body">
-          <p>Mọi vấn đề, thắc mắc bạn tham gia Group <a href="https://facebook.com/groups/jsteam.group">Jailbreaker Special Team</a> để được hỗ trợ nhanh chóng !</p>
+          <p>Mọi vấn đề, thắc mắc bạn tìm hiểu kỹ trước khi LIÊN HỆ <a href="https://www.messenger.com/t/frankynouva.vn">Franky Nouva</a>. Mọi trường hợp đọc sơ sài, qua loa, sẽ không dc hỗ trợ vì có làm cũng không ra kết quả. Con đường thành công không có dấu chân kẻ lười biếng !</p>
      
 	  <center>
-	  <a href="https://facebook.com/jsteam.page" target="_blank"><img src="/images/fb.png" alt="Avatar" style="width:45px"></a>
-	  <a href="https://facebook.com/groups/jsteam.group" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:45px"></a>
+	  <a href="https://www.messenger.com/t/frankynouva.vn" target="_blank"><img src="/images/fb.png" alt="Avatar" style="width:45px"></a>
+	  <a href="https://facebook.com/groups/nuoiaccfb" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:45px"></a>
 	  <a href="http://youtube.com/c/frankynouva" target="_blank"><img src="/images/youtube.png" alt="Avatar" style="width:45px"></a>
+	  <a href="https://www.messenger.com/t/frankynouva.vn" target="_blank"><img src="/images/messenger.png" alt="Avatar" style="width:45px"></a>
+	  <a href="http://zalo.me/0933998772" target="_blank"><img src="/images/zalo.png" alt="Avatar" style="width:45px"></a>
 		</div>
 		<center>
 		</br>
@@ -763,7 +791,7 @@ function showSlides() {
           <p align="left">&nbsp;&nbsp;<a href="#myModaljailbreak">5.Nên dùng iPhone Lock or QT?</p>
 	  <center>
         <a href="https://facebook.com/jsteam.page" target="_blank"><img src="/images/fbpage.png" alt="Avatar" style="width:30px"></a>
-	  <a href="https://facebook.com/groups/jsteam.group" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:30px"></a>
+	  <a href="https://facebook.com/groups/nuoiaccfb" target="_blank"><img src="/images/fbgroup.png" alt="Avatar" style="width:30px"></a>
 	  <a href="http://youtube.com/c/frankynouva" target="_blank"><img src="/images/youtube.png" alt="Avatar" style="width:30px"></a>
 		</div>
 		<center>
