--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ document.onmouseup = mousehandler;
 
 <p><h5><strong>====================================</strong></h5></p>
 
-<p><h5><strong>Bài viết hay hôm nay (F5 để tải thêm bài mới)</strong></h5></p>
+<p><h5><strong>Bài viết hay hôm nay (F5: load bài mới)</strong></h5></p>
 <p id="idemo1"></p>
 <script>
 if (Math.random() < 0.1) 
