--- a/index.html
+++ b/index.html
@@ -369,8 +369,18 @@ document.onmouseup = mousehandler;
 <a href="#myModalcontact" class="profile-card__name" data-toggle="modal"><b>CloneAppX & MAX2020lite</b></a>
 <div class="profile-card__txt"><h6><i>''Think difference, we make new experience''</i></h6></div>
 
+<p><h5><strong>===BÀI VIẾT CHO NGƯỜI MỚI===</strong></h5></p>
+<p><h6>1.Nuôi Acc để làm gì trong KD ?</h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>3.Những TH gây ra checkpoint?</a></h6></p> 
+<p><h6>4.Tại sao cần nhân bản app ?</h6></p>
+<p><h6>5.Tại sao acc cần 2FA, mua 2FA ?</h6></p>
+<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>6.Những Lưu ý QT khi đi mua acc ?</a></h6></p>  
+<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>7.Điểm yếu sai lầm trong các tool Auto</a></h6></p>
 
-<p><h5><strong>Tổng Hợp Link Bài Viết Quan Trọng:  <script> document.write(new Date().toLocaleDateString()); </script></strong></h5></p>
+
+
+<p><h5><strong>===Bài Viết Quan Trọng===</strong></h5></p>
+<p><h5><strong><script> document.write(new Date().toLocaleDateString()); </script></strong></h5></p>
 
 
 <p><h6><a href="https://bit.ly/34se2mt"  target='_blank'>1.Nghìn Lẻ Một Câu Hỏi liên quan</h6></p>
@@ -382,18 +392,15 @@ document.onmouseup = mousehandler;
 <p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>6.HD Gia Hạn tháng MAX2020lite</a></h6></p>
 <p><h6><a href="https://bit.ly/2G18MwT"  target='_blank'>7.HD kích CloneAppX hết pin (văng)</a></h6></p> 
 <p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>8.HD kích MAX2020lite hết pin (văng)</a></h6></p> 
-<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>9.Những Lưu ý QT khi đi mua acc ?</a></h6></p>  
-<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>9.HD Cách gửi hàng ViettelPost</a></h6></p> 
-<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>11.Những TH gây ra checkpoint?</a></h6></p> 
 <p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>12.Khẩu Huyết Trọng Yếu Nuôi Acc</a></h6></p>
-<p><h6>9.Tại sao acc cần 2FA ?</h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>9.HD Cách gửi hàng ViettelPost</a></h6></p> 
 <p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>15.Chi Phí cho CloneAppX & MAX2020lite</a></h6></p> 
 <p><h6>10.Liên hệ CHỐT CloneAppX & MAX2020lite</h6></p>
 <p><h6>11.Tham gia và liên hệ: Page|Group|Zalo (G)</h6></p>
-<p><h6>3.Nuôi Acc để làm gì ?</h6></p>
-<p><h6>4.Tại sao cần nhân bản app ?</h6></p>
 
-<p><h5><strong>====================================</strong></h5></p>
+
+
+
 
 <p><h5><strong>Bài viết hay hôm nay (F5: load bài mới)</strong></h5></p>
 <p id="idemo1"></p>
