--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@ document.onmouseup = mousehandler;
 <p><h5><strong>===BÀI VIẾT CHO NGƯỜI MỚI===</strong></h5></p>
 <p><h6>1.Nuôi Acc để làm gì trong KD ?</h6></p>
 <p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>3.Những TH gây ra checkpoint?</a></h6></p> 
-<p><h6>4.Tại sao cần nhân bản app ?</h6></p>
-<p><h6>5.Tại sao acc cần 2FA, mua 2FA ?</h6></p>
+<p><h6>4.Sao acc cần 2FA, tác dụng gì ?</h6></p>
+<p><h6>5.Lý do cần nhân bản, CloneAppX ?</h6></p>
 <p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>6.Những Lưu ý QT khi đi mua acc ?</a></h6></p>  
 <p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>7.Điểm yếu sai lầm trong các tool Auto</a></h6></p>
 
