--- a/index.html
+++ b/index.html
@@ -370,12 +370,13 @@ document.onmouseup = mousehandler;
 <div class="profile-card__txt"><h6><i>''Think difference, we make new experience''</i></h6></div>
 
 <p><h5><strong>===BÀI VIẾT CHO NGƯỜI MỚI===</strong></h5></p>
-<p><h6>1.Nuôi Acc để làm gì trong KD ?</h6></p>
+<p><h6><a href="https://bit.ly/3mCVoOW"  target='_blank'>1.Nuôi Acc để làm gì trong KD ?</h6></p>
 <p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>3.Những TH gây ra checkpoint?</a></h6></p> 
 <p><h6>4.Sao acc cần 2FA, tác dụng gì ?</h6></p>
 <p><h6>5.Lý do cần nhân bản, CloneAppX ?</h6></p>
-<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>6.Những Lưu ý QT khi đi mua acc ?</a></h6></p>  
-<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>7.Điểm yếu sai lầm trong các tool Auto</a></h6></p>
+<p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>6.Những Lưu ý QT khi đi mua acc ?</a></h6></p> 
+<p><h6><a href="https://bit.ly/37W9h6I"  target='_blank'>7.Sao không nên bảo lãnh, mua hộ?</a></h6></p> 
+<p><h6><a href="https://bit.ly/31Y33PZ"  target='_blank'>8.Điểm yếu sai lầm trong các tool Auto</a></h6></p>
 
 
 
