--- a/index.html
+++ b/index.html
@@ -377,8 +377,7 @@ document.onmouseup = mousehandler;
 <p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>6.Những Lưu ý QT khi đi mua acc ?</a></h6></p> 
 <p><h6><a href="https://bit.ly/37W9h6I"  target='_blank'>7.Sao không nên bảo lãnh, mua hộ?</a></h6></p> 
 <p><h6><a href="https://bit.ly/31Y33PZ"  target='_blank'>8.Điểm yếu sai lầm trong các tool Auto</a></h6></p>
-
-
+<p><h6><a href="https://bit.ly/31Y33PZ"  target='_blank'>9.Nhận login hộ acc cho anh em CloneAppX</a></h6></p>
 
 <p><h5><strong>===Bài Viết Quan Trọng===</strong></h5></p>
 <p><h5><strong><script> document.write(new Date().toLocaleDateString()); </script></strong></h5></p>
@@ -394,7 +393,7 @@ document.onmouseup = mousehandler;
 <p><h6><a href="https://bit.ly/2G18MwT"  target='_blank'>7.HD kích CloneAppX hết pin (văng)</a></h6></p> 
 <p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>8.HD kích MAX2020lite hết pin (văng)</a></h6></p> 
 <p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>12.Khẩu Huyết Trọng Yếu Nuôi Acc</a></h6></p>
-<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>9.HD Cách gửi hàng ViettelPost</a></h6></p> 
+<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>9.HD Cách gửi hàng ViettelPost</a></h6></p>
 <p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>15.Chi Phí cho CloneAppX & MAX2020lite</a></h6></p> 
 <p><h6>10.Liên hệ CHỐT CloneAppX & MAX2020lite</h6></p>
 <p><h6>11.Tham gia và liên hệ: Page|Group|Zalo (G)</h6></p>
