--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ document.onmouseup = mousehandler;
 
 <p><h5><strong>===BÀI VIẾT CHO NGƯỜI MỚI===</strong></h5></p>
 <p><h6><a href="https://bit.ly/3mCVoOW"  target='_blank'>1.Nuôi Acc giúp ích gì trong KD ?</h6></p>
-<p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>3.Những TH gây ra checkpoint?</a></h6></p> 
+<p><h6><a href="https://bit.ly/2HEu2cH"  target='_blank'>3.Những TH gây ra checkpoint?</a></h6></p> 
 <p><h6><a href="https://bit.ly/3mBkmhJ"  target='_blank'>4.Sao acc cần 2FA, tác dụng gì ?</h6></p>
 <p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>5.Lý do cần nhân bản, CloneAppX ?</h6></p>
 <p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>6.Những Lưu ý QT khi đi mua acc ?</a></h6></p> 
