--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ document.onmouseup = mousehandler;
 <p><h6><a href="https://bit.ly/31KrYGD"  target='_blank'>6.Những Lưu ý QT khi đi mua acc ?</a></h6></p> 
 <p><h6><a href="https://bit.ly/37W9h6I"  target='_blank'>7.Sao không nên bảo lãnh, mua hộ?</a></h6></p> 
 <p><h6><a href="https://bit.ly/31Y33PZ"  target='_blank'>8.Điểm yếu sai lầm trong các tool Auto</a></h6></p>
-<p><h6><a href="https://bit.ly/31Y33PZ"  target='_blank'>9.Nhận login hộ acc cho anh em CloneAppX</a></h6></p>
+<p><h6><a href="https://bit.ly/2HOiMKK"  target='_blank'>9.Nhận login hộ acc cho anh em CloneAppX</a></h6></p>
 
 <p><h5><strong>===Bài Viết Quan Trọng===</strong></h5></p>
 <p><h5><strong><script> document.write(new Date().toLocaleDateString()); </script></strong></h5></p>
@@ -385,7 +385,7 @@ document.onmouseup = mousehandler;
 
 <p><h6><a href="https://bit.ly/34se2mt"  target='_blank'>1.Nghìn Lẻ Một Câu Hỏi liên quan</h6></p>
 <p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>2.CloneAppX (thủ công) là gì ?</h6></p>
-<p><h6>3.MAX2020lite (bản auto) là gì ?</h6></p>
+<p><h6><a href="https://bit.ly/2HLQikn"  target='_blank'>3.MAX2020lite (bản auto) là gì ?</h6></p>
 <p><h6><a href="https://bit.ly/2HyPhw7"  target='_blank'>4.Lộ Trình Nuôi cho người mới</a></h6></p>
 <p><h6><a href="https://www.youtube.com/watch?v=yCmaI09rF9s"  target='_blank'>5.HDSD CloneAppX ( thủ công)</a></h6></p>
 <p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>6.HDSD MAX2020lite (bản auto)</a></h6></p>
