--- a/index.html
+++ b/index.html
@@ -385,18 +385,18 @@ document.onmouseup = mousehandler;
 
 <p><h6><a href="https://bit.ly/34se2mt"  target='_blank'>1.Nghìn Lẻ Một Câu Hỏi liên quan</h6></p>
 <p><h6><a href="https://bit.ly/35zluM2"  target='_blank'>2.CloneAppX (thủ công) là gì ?</h6></p>
-<p><h6><a href="https://bit.ly/2HLQikn"  target='_blank'>3.MAX2020lite (bản auto) là gì ?</h6></p>
+<p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>3.MAX2020lite (bản auto) là gì ?</h6></p>
 <p><h6><a href="https://bit.ly/2HyPhw7"  target='_blank'>4.Lộ Trình Nuôi cho người mới</a></h6></p>
 <p><h6><a href="https://www.youtube.com/watch?v=yCmaI09rF9s"  target='_blank'>5.HDSD CloneAppX ( thủ công)</a></h6></p>
 <p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>6.HDSD MAX2020lite (bản auto)</a></h6></p>
 <p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>6.HD Gia Hạn tháng MAX2020lite</a></h6></p>
 <p><h6><a href="https://bit.ly/2G18MwT"  target='_blank'>7.HD kích CloneAppX hết pin (văng)</a></h6></p> 
 <p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>8.HD kích MAX2020lite hết pin (văng)</a></h6></p> 
-<p><h6><a href="https://www.youtube.com/watch?v=smyOoKTUJOk"  target='_blank'>12.Khẩu Huyết Trọng Yếu Nuôi Acc</a></h6></p>
+<p><h6><a href="https://bit.ly/3kVT3OZ"  target='_blank'>12.Khẩu Huyết Trọng Yếu Nuôi Acc</a></h6></p>
 <p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>9.HD Cách gửi hàng ViettelPost</a></h6></p>
 <p><h6><a href="https://www.youtube.com/watch?v=0CcwsSaN90Q"  target='_blank'>15.Chi Phí cho CloneAppX & MAX2020lite</a></h6></p> 
-<p><h6>10.Liên hệ CHỐT CloneAppX & MAX2020lite</h6></p>
-<p><h6>11.Tham gia và liên hệ: Page|Group|Zalo (G)</h6></p>
+<p><h6><a href="#myModalcontact" data-toggle="modal">10.Liên hệ CHỐT CloneAppX & MAX2020lite</h6></p>
+<p><h6><a href="#myModalcontact" data-toggle="modal">11.Tham gia và liên hệ: Page|Group|Zalo (G)</h6></p>
 
 
 
