--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@ document.getElementById("idemo5").innerHTML = text;
 </script>
 
 <p><h6><strong>Lưu ý:</strong> Nếu bài Group kín,Join Group mới đọc được.</h6></p>
-<button type="button" class="profile-card__button button--orange" data-toggle="modal" data-target="#myModal">Cài Đặt Tiện Ích</button>
+<button type="button" class="profile-card__button button--orange" data-toggle="modal" data-target="">LIÊN HỆ</button>
 (iOS 9 - iOS 13)
 	</style>
 </head>
