--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ document.getElementById("idemo5").innerHTML = text;
 
 <p><h6><strong>Lưu ý:</strong> Nếu bài Group kín,Join Group mới đọc được.</h6></p>
 <button type="button" class="profile-card__button button--orange" data-toggle="modal" data-target="">LIÊN HỆ</button>
-(iOS 9 - iOS 13)
+(CloneAppX - MAX2020lite)
 	</style>
 </head>
 <body>
