--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ document.onmouseup = mousehandler;
 <p><h6><a href="https://bit.ly/31Y33PZ"  target='_blank'>8.Điểm yếu sai lầm trong các tool Auto</a></h6></p>
 <p><h6><a href="https://bit.ly/2HOiMKK"  target='_blank'>9.Nhận login hộ acc cho anh em CloneAppX</a></h6></p>
 
-<p><h5><strong>===Bài Viết Quan Trọng===</strong></h5></p>
+<p><h5><strong>===BÀI VIẾT QUAN TRỌNG===</strong></h5></p>
 <p><h5><strong><script> document.write(new Date().toLocaleDateString()); </script></strong></h5></p>
 
 
@@ -402,7 +402,7 @@ document.onmouseup = mousehandler;
 
 
 
-<p><h5><strong>Bài viết hay hôm nay (F5: load bài mới)</strong></h5></p>
+p><h5><strong>===BÀI VIẾT HÔM NAY (F5: load bài mới)===</strong></h5></p> 
 <p id="idemo1"></p>
 <script>
 if (Math.random() < 0.1) 
