--- a/index.html
+++ b/index.html
@@ -400,9 +400,10 @@ document.onmouseup = mousehandler;
 
 
 
-
-
 <p><h5><strong>===BÀI VIẾT HÔM NAY (F5: load bài mới)===</strong></h5></p> 
+<p><h5><strong>=========================================</strong></h5></p> 
+
+
 <p id="idemo1"></p>
 <script>
 if (Math.random() < 0.1) 
