--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@ document.onmouseup = mousehandler;
 <p><h6><a href="https://bit.ly/37W9h6I"  target='_blank'>7.Sao không nên bảo lãnh, mua hộ?</a></h6></p> 
 <p><h6><a href="https://bit.ly/31Y33PZ"  target='_blank'>8.Điểm yếu sai lầm trong các tool Auto</a></h6></p>
 <p><h6><a href="https://bit.ly/2HOiMKK"  target='_blank'>9.Nhận login hộ acc cho anh em CloneAppX</a></h6></p>
+<p><h6><a href="https://bit.ly/2HOiMKK"  target='_blank'>10.Nuôi Acc có khó và hiệu quả hay không?</a></h6></p>
 
 <p><h5><strong>===BÀI VIẾT QUAN TRỌNG===</strong></h5></p>
 <p><h5><strong><script> document.write(new Date().toLocaleDateString()); </script></strong></h5></p>
